fix team avatar

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,4 +1,4 @@
 topmello:
   name: Top Mello
   title: Top Mello Team
-  image_url: '../static/img/settle-aid-icon.png'
+  image_url: 'https://avatars.githubusercontent.com/u/142077364?s=96&v=4'
